fixed some text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ div#resume-profile h2
 
 div#resume-profile ul li 
 {
-  text-align: left;
+  text-align: center;
   font-size: 140%;
   list-style-type: none;
 }
